--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             <i class='bx bxs-location-plus' style="font-size: 30px; color: white;"></i>
                             <h3  style="line-height: 30px;margin-left: 20px; text-align: justify;">Location: #151, National Road No. 3, Sangkat Chom Chao II, Khan Posenchey, Phnom Penh</h3>
                             </div>
-                            <img src="image/map.png" style="width: 400px;height: 150px;">   
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.3786039418806!2d104.82065607411506!3d11.524675544948575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31094fbd312449f5%3A0xaf3393bc9eda7678!2z4Z6f4Z624Z6A4Z6b4Z6c4Z634Z6R4Z-S4Z6Z4Z624Z6b4Z-Q4Z6Z4Z6U4Z-K4Z-C4Z6b4Z6S4Z644Z6i4Z6T4Z-S4Z6P4Z6a4Z6H4Z624Z6P4Z63IOGekeGeuOGfoiAo4Z6f4Z624Z6B4Z624Z6f4Z-S4Z6W4Z624Z6T4Z6i4Z624Z6A4Z624Z6f4Z6F4Z-E4Z6Y4Z6F4Z-FKQ!5e0!3m2!1skm!2skh!4v1696337635583!5m2!1skm!2skh" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
                         </div>
                         <div style="width:max-content ">
                             <h1 style="text-align: center;">Foods</h1>
